--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
   },
   "dependencies": {
     "bluebird": "^3.7.2",
+    "cheerio": "^1.0.0-rc.3",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "lodash": "^4.17.15",
+    "moment": "^2.25.1",
     "mongoose": "^5.9.9",
     "morgan": "~1.9.1",
     "puppeteer": "^3.0.0",
